# Portfolio updateed with new designs and features

--- a/About me/style.css
+++ b/About me/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .navbar .nav_ul .nav_logo {
-    font-family: "Rougbelt";
+    font-family: "Italianno";
     letter-spacing: 1px;
     position: relative;
     margin-right: auto;
