--- a/Project/Project 2 - Quick Notes/style.css
+++ b/Project/Project 2 - Quick Notes/style.css
@@ -29,6 +29,10 @@ body {
     background-color: var(--base-color);
 }
 
+a {
+    text-decoration: none;
+}
+
 header .go-back-link {
     position: fixed;
     top: 50%;
