--- a/Project/Project 3 - Analog Clock/style.css
+++ b/Project/Project 3 - Analog Clock/style.css
@@ -11,6 +11,11 @@
     /* transition: 500ms; */
 }
 
+a {
+    text-decoration: none;
+}
+
+
 body {
     display: flex;
     flex-direction: column;
