--- a/Project/Project 1 - Eduford Website/style.css
+++ b/Project/Project 1 - Eduford Website/style.css
@@ -12,6 +12,10 @@ body {
     font-family: 'poppins', 'sans-serif';
 }
 
+a {
+    text-decoration: none;
+}
+
 /* <----||------------------------||-----> */
 /* <----||   <---| Header |--->   ||-----> */
 /* <----||------------------------||-----> */
