--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .navbar .nav_ul .nav_logo {
-    font-family: "Rougbelt";
+    font-family: "Italianno";
     letter-spacing: 1px;
     position: relative;
     margin-right: auto;
@@ -80,10 +80,8 @@ body {
     display: flex;
 }
 
-.bar {
+.navbar .bar {
     cursor: pointer;
-    /* position: relative;
-    top: 0px; */
     font-size: 0rem;
     transition: .5s ease;
 }
@@ -330,9 +328,9 @@ body {
 }
 @media screen and (max-width: 636px) {
 
-    .bar {
-        /* top: 0px; */
+    .navbar .bar {
         font-size: 1rem;
+        display: block;
     }
 
     .bigDevice{
@@ -435,15 +433,6 @@ body {
         right: 10px;
         top: -300px;
         z-index: 5;
-    }
-
-    .bars a:valid~.hamburger,
-    .bars a:focus~.hamburger {
-        /* display: block; */
-        position: absolute;
-        right: 50px;
-        top: 50px;
-        z-index: 10;
     }
 
     .box_container {
